<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetalhesPacoteActivity">

    <ImageView
        android:id="@+id/activity_detalhes_pacote_background_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/texto_background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/activity_detalhes_pacote_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/activity_detalhes_pacote_background_image"
        app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pacote_background_image"
        tools:text="@string/texto_sao_paulo" />

    <TextView
        android:id="@+id/activity_detalhes_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/activity_detalhes_pacote_destino"
        app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pacote_destino"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/activity_detalhes_pacote_periodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/activity_detalhes_pacote_total"
        app:layout_constraintStart_toStartOf="@id/activity_detalhes_pacote_dias"
        app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pacote_dias"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/activity_detalhes_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_preco_final"
        app:layout_constraintBottom_toTopOf="@id/activity_detalhes_pacote_total"
        app:layout_constraintEnd_toEndOf="@id/activity_detalhes_pacote_total" />

    <TextView
        android:id="@+id/activity_detalhes_pacote_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="@id/activity_detalhes_pacote_periodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/activity_detalhes_pacote_periodo"
        tools:text="R$249,99" />

    <Button
        android:id="@+id/activity_detalhes_pacote_botao_comprar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_botao_finalizar_compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>